# JAMScript

./: .eslintrc  .gitignore  .gitmodules  .mainCompiler.js.swp  .sconsign.dblite  .travis.yml  BUG_LIST  Brewfile  CreateNpmGlobal.sh  Gemfile  JAMScript  JAMScript-1.0-Design-Notes.txt  LICENSE  Makefile  README.md  SConstruct  TODO  Tasks  _config.yml  ast.dot  binding.gyp  cinterpret.js  cinterpret_file.js  cond-tasks.md  copy.sh  createNpmGlobal.sh  data-per.md  depend-install-docker.sh  depend-install-ubuntu.sh  diff.txt  docker.md  emulator-run.md  flow.md  flows.js  get-src.md  hello.md  index.html  index.js  install-dependencies.sh  install-ubuntu-dep.sh  (+69 more)
.cache/: c_parser.ojs.1433370122000.js  c_parser.ojs.1433529112000.js  c_parser.ojs.1433529172000.js  c_parser.ojs.1433529270000.js  c_parser.ojs.1433530779000.js  c_parser.ojs.1433535792000.js  c_parser.ojs.1433535999000.js  c_parser.ojs.1433604339000.js  c_parser.ojs.1433767465000.js  c_parser.ojs.1433769463000.js  c_parser.ojs.1433769819000.js  c_parser.ojs.1433802810000.js  c_parser.ojs.1433803157000.js  c_parser.ojs.1433803262000.js  c_parser.ojs.1433804900000.js  c_parser.ojs.1433805660000.js  c_parser.ojs.1433810943000.js  c_parser.ojs.1433812360000.js  (+78 more)
.sconf_temp/: conftest_0  (+4 more)
lib/cside-esp32/src/: CMakeLists.txt  calls.c  calls.h  cnode.c  cnode.h  command.c  command.h  constants.h  entry.c  idf_component.yml  multicast.c  multicast.h  nvoid.c  nvoid.h  processor.c  processor.h  receiver.c  receiver.h  system_manager.c  system_manager.h  task.c  task.h  tboard.c  tboard.h  udp.c  udp.h  util.c  util.h
(+2983 files in other folders)
